trying to fix jumping animaton...

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,8 @@ div#home {
 
 #d1, #d2, #d3, #d4{
   /* TRANSITION on div with pictures */
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
    -webkit-transition: background-image 1s ease-in-out;
    -moz-transition: background-image 1s ease-in-out;
    -o-transition: background-image 1s ease-in-out;
